# RAMRider

./: .gitignore  CMakeLists.txt  LICENSE  README.md  premake5.lua
Dependencies/googletest/googletest/: CMakeLists.txt
Sources/CLI/: CMakeLists.txt  main.cpp
Sources/RAMRider/: CMakeLists.txt  MemoryScanner.cpp  MemoryScanner.hpp  ProcessHandler.cpp
Sources/RAMRider/DebugUtils/: Assert.cpp  Compiler.hpp
Sources/RAMRider/RAMRider/: MemoryScanner.hpp  ProcessHandler.cpp  ProcessHandler.hpp
Sources/RAMRider/RAMRider/DebugUtils/: Assert.cpp  Assert.hpp
Sources/RAMRiderCLI/: CMakeLists.txt
Sources/RAMRiderCLI/CLI/: main.cpp
Sources/TestApp/: CMakeLists.txt
Sources/TestApp/App/: TestApp.cpp  TestApp.hpp
